--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="gallerie.html">Gallerie</a></li>
                 <li><a href="escales.html">Escales</a></li>
-                <li><a href="#">à propos</a></li>
+                <li><a href="#footer">à propos</a></li>
                 <li><a href="#">Attributions</a></li>
             </ul>
             <hr>
@@ -73,17 +73,17 @@
                             <img src="./img/cafeFleuri.png" class="d-block w-100 carousel-img" alt="Café fleuri">
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselInterval"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselInterval"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselInterval"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselInterval"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
             <div class="ban">
                 <img class="ban" src="./img/plume.png" alt="Bannière">
@@ -97,9 +97,9 @@
 
         <!-- About -->
         <section class="container-fluid about">
-            <div class="container">
+            <div class="container about-contain">
                 <div class="row aboutInfo">
-                    <h2>Débutez la visite par ici ...</h2>
+                    <h2>Débutez la visite</h2>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 about-article">
                         <div class="iconBox">
                             <img class="iconImg" src="./img/robin.png" alt="Robin Bird" id="robin">
@@ -241,11 +241,11 @@
     </main>
 
     <footer class="container-fluid">
-        <div class="footer-contain">
+        <div class="footer-contain" id="footer">
             <div class="footer-box">
                 <hr>
                 <div>
-                    <img src="./img/icons8-feather-60.png" alt="">
+                    <img src="./icons/icons8-feather-60.png" alt="feather icon">
                     <h4>Site</h4>
                 </div>
                 <hr>
@@ -260,7 +260,7 @@
             <div class="footer-box">
                 <hr>
                 <div>
-                    <img src="./img/icons8-livres-100.png" alt="">
+                    <img src="./icons/icons8-livres-100.png" alt="books icon">
                     <h4>Proverbes</h4>
                 </div>
                 <hr>
