Add Gallerie media query big size

--- a/gallerie.html
+++ b/gallerie.html
@@ -79,15 +79,25 @@
                             <li class="color4"><a href="#relation">Relations</a></li>
                             <li class="color1"><a href="#emploi">Emploi</a></li>
                         </ul>
-                        <img src="./icons/north.png" alt="icon-arrow" class="icon-arrow">
+                        <img src="./img/etoiles.png" alt="contemplation des étoiles" class="gal-img">
                     </div>
                     <hr>
-                    <img src="./img/etoiles.png" alt="contemplation des étoiles">
+                    <div class="gal-imgbox2">
+                        <img src="./img/tree.png" alt="icon-arrow" class="gal-img2">
+                    </div>
                     <hr>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12 article-contain">
                         <div class="learnBox">
                             <div>
-                                <h3 id="sagesse">Sagesse</h3>
+                                <div class="theme-box">
+                                    <div class="icon-anchor6">
+                                        <a href="#header"><img src="./icons/north.png" alt="south arrow"></a>
+                                    </div>
+                                    <h3 id="sagesse">Sagesse</h3>
+                                    <div class="icon-anchor6">
+                                        <a href="#couple"><img src="./icons/south.png" alt="south arrow"></a>
+                                    </div>
+                                </div>
                                 <hr>
                                 <p class="proverbe">"La conduite du <strong>stupide</strong> est droite à ses yeux; le
                                     <strong>sage</strong>, lui, écoute les <strong>conseils</strong>."
@@ -141,7 +151,19 @@
                         <div class="learnBox">
                             <div>
                                 <hr>
-                                <h3 id="couple">Couple</h3>
+                                <div class="gal-imgbox2">
+                                    <img src="./img/oldCouple.png" alt="icon-arrow" class="gal-img2">
+                                </div>
+                                <hr>
+                                <div class="theme-box">
+                                    <div class="icon-anchor6">
+                                        <a href="#sagesse"><img src="./icons/north.png" alt="south arrow"></a>
+                                    </div>
+                                    <h3 id="couple">Couple</h3>
+                                    <div class="icon-anchor6">
+                                        <a href="#famille"><img src="./icons/south.png" alt="south arrow"></a>
+                                    </div>
+                                </div>
                                 <hr>
                                 <p class="proverbe">"De même, les maris doivent aimer leurs femmes comme leurs propres
                                     corps. Un homme qui aime sa femme s’aime lui-même,"
@@ -175,7 +197,19 @@
                         <div class="learnBox">
                             <div>
                                 <hr>
-                                <h3 id="famille">Famille</h3>
+                                <div class="gal-imgbox2">
+                                    <img src="./img/autumnCabin.png" alt="icon-arrow" class="gal-img2">
+                                </div>
+                                <hr>
+                                <div class="theme-box">
+                                    <div class="icon-anchor6">
+                                        <a href="#couple"><img src="./icons/north.png" alt="south arrow"></a>
+                                    </div>
+                                    <h3 id="famille">Famille</h3>
+                                    <div class="icon-anchor6">
+                                        <a href="#relation"><img src="./icons/south.png" alt="south arrow"></a>
+                                    </div>
+                                </div>
                                 <hr>
                                 <p class="proverbe">"C’est grâce à la sagesse que l’on construit une maison, et c’est
                                     grâce au discernement qu’on la rend sûre."
@@ -198,7 +232,19 @@
                         </div>
                         <div class="learnBox">
                             <hr>
-                            <h3 id="relation">Relations</h3>
+                            <div class="gal-imgbox2">
+                                <img src="./img/cafeFleuri.png" alt="icon-arrow" class="gal-img2">
+                            </div>
+                            <hr>
+                            <div class="theme-box">
+                                <div class="icon-anchor6">
+                                    <a href="#famille"><img src="./icons/north.png" alt="south arrow"></a>
+                                </div>
+                                <h3 id="relation">Relations</h3>
+                                <div class="icon-anchor6">
+                                    <a href="#emploi"><img src="./icons/south.png" alt="south arrow"></a>
+                                </div>
+                            </div>
                             <hr>
                             <div>
                                 <p class="proverbe">"Ne te vexe pas pour un rien, car la susceptibilité loge chez les
@@ -242,7 +288,19 @@
                         </div>
                         <div class="learnBox">
                             <hr>
-                            <h3 id="emploi">Emploi</h3>
+                            <div class="gal-imgbox2">
+                                <img src="./img/CouperBois.png" alt="icon-arrow" class="gal-img2">
+                            </div>
+                            <hr>
+                            <div class="theme-box">
+                                <div class="icon-anchor6">
+                                    <a href="#relation"><img src="./icons/north.png" alt="south arrow"></a>
+                                </div>
+                                <h3 id="emploi">Emploi</h3>
+                                <div class="icon-anchor6">
+                                    <a href="#gallerie"><img src="./icons/south.png" alt="south arrow"></a>
+                                </div>
+                            </div>
                             <hr>
                             <div>
                                 <p class="proverbe">"Tout travail soutenu procure des bienfaits, mais l’homme qui se
