Add Escales html page

--- a/escales.html
+++ b/escales.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./Css/style.css">
     <link rel="stylesheet" href="./Css/header.css">
     <link rel="stylesheet" href="./Css/banner.css">
-    <link rel="stylesheet" href="./Css/main.css">
+    <link rel="stylesheet" href="./Css/main-escales.css">
     <link rel="stylesheet" href="./Css/carousel.css">
     <link rel="stylesheet" href="./Css/footer.css">
 </head>
@@ -48,7 +48,7 @@
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="gallerie.html">Gallerie</a></li>
                 <li><a href="escales.html">Escales</a></li>
-                <li><a href="#">à propos</a></li>
+                <li><a href="#footer">à propos</a></li>
                 <li><a href="#">Attributions</a></li>
             </ul>
             <hr>
@@ -58,30 +58,124 @@
 
     <main>
         <!-- banner -->
-        <section class="container-fluid banner">
-            <div class="inner-banner">
-                <h2 class="plume" id="plume">Au <strong>Berceau d'amitiés</strong></h2>
-                <p>Serez-vous du voyage ?</p>
+        <section class="container-fluid escales-banner">
+            <div class="escales-inner-banner">
+                <img src="./img/voilier.png" alt="Voilier">
+                <h2 class="menu" id="plume">...</h2>
             </div>
         </section>
         <!-- end banner -->
-
-        <!-- About -->
-        <section class="container-fluid">
+        <div class="separate-box"></div>
+        <!-- escales -->
+        <section class="container-fluid escales-wrapper">
             <div class="container">
                 <div class="row">
-                    <h2>...</h2>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
-
+                        <div class="box1">
+                            <h2>Un tour de France</h2>
+                            <img src="./img/France.png" alt="France">
+                            <div class="box2">
+                                <p>
+                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
+                                    quotidiens.
+                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
+                                    peines.
+                                </p>
+                            </div>
+                            <a href="form.html"><button>Contacter</button></a>
+                        </div>
+                        <hr>
                     </article>
                     <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
-
+                        <div class="box1">
+                            <h2>Musée</h2>
+                            <img src="./img/BritishMuseum.png" alt="Musée">
+                            <div class="box2">
+                                <p>
+                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
+                                    quotidiens.
+                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
+                                    peines.
+                                </p>
+                            </div>
+                            <a href="form.html"><button>Contacter</button></a>
+                        </div>
+                    </article>
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+                        <div class="box1">
+                            <h2>Un tour de France</h2>
+                            <img src="./img/Livres.png" alt="Livres">
+                            <div class="box2">
+                                <p>
+                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
+                                    quotidiens.
+                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
+                                    peines.
+                                </p>
+                            </div>
+                            <a href="form.html"><button>Contacter</button></a>
+                        </div>
                     </article>
                 </div>
             </div>
         </section>
-        <!-- end About -->
-
+        <div class="separate-box"></div>
+        <div class="direction"><img src="./icons/boussole.png" alt="boussole"></div>
+        <div class="separate-box"></div>
+        <section class="container-fluid escales-wrapper">
+            <div class="container">
+                <div class="row">
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+                        <div class="box1">
+                            <h2>Un tour de France</h2>
+                            <img src="./img/Animaux.png" alt="Animaux">
+                            <div class="box2">
+                                <p>
+                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
+                                    quotidiens.
+                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
+                                    peines.
+                                </p>
+                            </div>
+                            <a href="form.html"><button>Contacter</button></a>
+                        </div>
+                    </article>
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+                        <div class="box1">
+                            <h2>Un tour de France</h2>
+                            <img src="./img/Ocean.png" alt="Océan">
+                            <div class="box2">
+                                <p>
+                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
+                                    quotidiens.
+                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
+                                    peines.
+                                </p>
+                            </div>
+                            <a href="form.html"><button>Contacter</button></a>
+                        </div>
+                    </article>
+                    <article class="col-md-4 col-lg-4 col-xs-12 col-sm-12">
+                        <div class="box1">
+                            <h2>Un tour de France</h2>
+                            <img src="./img/Montagne.png" alt="Montagne">
+                            <div class="box2">
+                                <p>
+                                    Retrouvez-nous en divers Lieux pour échanger sur les solutions aux soucis du
+                                    quotidiens.
+                                    Partagez ce qui vous tient à coeur, vos bonheurs, vos astuces vos joie et vos
+                                    peines.
+                                </p>
+                            </div>
+                            <a href="form.html"><button>Contacter</button></a>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- end escales -->
+        <div class="separate-box sep-box2"></div>
+        <div class="direction"><img src="./icons/boussole.png" alt="boussole"></div>
         <!-- Carousel -->
         <section class="carousel">
             <h3 id="gallerie">Visitez notre gallerie</h3>
@@ -141,11 +235,11 @@
     </main>
 
     <footer class="container-fluid">
-        <div class="footer-contain">
+        <div class="footer-contain" id="footer">
             <div class="footer-box">
                 <hr>
                 <div>
-                    <img src="./img/icons8-feather-60.png" alt="">
+                    <img src="./icons/icons8-feather-60.png" alt="feather icon">
                     <h4>Site</h4>
                 </div>
                 <hr>
@@ -160,7 +254,7 @@
             <div class="footer-box">
                 <hr>
                 <div>
-                    <img src="./img/icons8-livres-100.png" alt="">
+                    <img src="./icons/icons8-livres-100.png" alt="books icon">
                     <h4>Proverbes</h4>
                 </div>
                 <hr>
